--- a/packages/crypto/pubspec.yaml
+++ b/packages/crypto/pubspec.yaml
@@ -4,17 +4,17 @@ version: 0.1.4
 repository: https://github.com/KLEAK-Development/multiversx
 
 environment:
-  sdk: ^3.6.0
+  sdk: ">=3.7.0 <4.0.0"
 
 resolution: workspace
 
 # Add regular dependencies here.
 dependencies:
   bip39: ^1.0.6
-  convert: ^3.1.1
+  convert: ^3.1.2
   ed25519_hd_key: ^2.3.0
   pinenacl: ^0.6.0
 
 dev_dependencies:
-  lints: ^5.0.0
-  test: ^1.25.0
+  lints: ^6.0.0
+  test: ^1.26.3
