--- a/packages/sdk/pubspec.yaml
+++ b/packages/sdk/pubspec.yaml
@@ -4,17 +4,17 @@ version: 0.5.0
 repository: https://github.com/KLEAK-Development/multiversx
 
 environment:
-  sdk: ^3.6.0
+  sdk: ">=3.7.0 <4.0.0"
 
 resolution: workspace
 
 dependencies:
-  convert: ^3.1.0
-  http: ^1.2.2
-  meta: ^1.12.0
-  multiversx_api: ^0.1.3
-  multiversx_crypto: ^0.1.3
-  pointycastle: ^3.9.1
+  convert: ^3.1.1
+  http: ^1.4.0
+  meta: ^1.17.0
+  multiversx_api: ^0.1.5
+  multiversx_crypto: ^0.1.4
+  pointycastle: ^4.0.0
   json_annotation: ^4.9.0
 
 dev_dependencies:
